Trained with clement voice

--- a/ai_model/speaker_identification.ipynb
+++ b/ai_model/speaker_identification.ipynb
@@ -144,8 +144,9 @@
     "    plt.show()\n",
     "\n",
     "for audio_path in os.listdir(output_dir):\n",
-    "    plot_audio_features(os.path.join(output_dir, audio_path))\n",
-    "    break"
+    "    if audio_path.endswith('Arul_combined.wav'):\n",
+    "        plot_audio_features(os.path.join(output_dir, audio_path))\n",
+    "        break"
    ]
   },
   {
@@ -173,6 +174,7 @@
     "                features.append(mfccs.T)\n",
     "                labels.append(i)\n",
     "\n",
+    "        print(\"Finished feature extraction from\", len(features), \"files\", features[-1].shape)\n",
     "    return np.array(features), np.array(labels)\n",
     "\n",
     "X, y = extract_features(dataset_path, speaker_folders)\n",
