--- a/ai_model/Speaker_Identification/speaker_identification.ipynb
+++ b/ai_model/Speaker_Identification/speaker_identification.ipynb
@@ -29,6 +29,7 @@
     "import matplotlib.pyplot as plt\n",
     "import librosa\n",
     "import soundfile as sf\n",
+    "import pandas as pd\n",
     "from IPython.display import display, Audio\n",
     "import librosa.display\n",
     "import tensorflow as tf\n",
@@ -270,6 +271,16 @@
     "plt.xlabel(\"Predicted Label\")\n",
     "plt.ylabel(\"True Label\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# currTime = pd.Timestamp.now().strftime(\"%Y%m%d%H%M\")\n",
+    "# model.save(f'weights/model-{currTime}.keras')"
    ]
   }
  ],
